--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,34 +1,54 @@
 name: Python Package using Conda
 
-on: [push]
+on: 
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build-linux:
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 5
-
+      matrix:
+        python-version: [3.10]
+    
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.10
+    # Step 1: Checkout the repository
+    - name: Check out code
+      uses: actions/checkout@v4
+    
+    # Step 2: Set up Python
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        python-version: '3.10'
-    - name: Add conda to system path
+        python-version: ${{ matrix.python-version }}
+    
+    # Step 3: Install Miniconda and update system path
+    - name: Install Miniconda
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+        auto-update-conda: true
+    
+    # Step 4: Create environment and install dependencies
+    - name: Create conda environment from environment.yml
       run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
-    - name: Install dependencies
-      run: |
-        conda env update --file environment.yml --name base
+        conda env create --file environment.yml --name flask_env
+        conda activate flask_env
+    
+    # Step 5: Lint the code using flake8
     - name: Lint with flake8
       run: |
-        conda install flake8
-        # stop the build if there are Python syntax errors or undefined names
+        conda install flake8 -y
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    
+    # Step 6: Test the application with pytest
     - name: Test with pytest
       run: |
-        conda install pytest
+        conda install pytest -y
         pytest
+
